[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revkeen"
version = "1.20260314.49"
description = "RevKeen Python SDK - Stripe-like billing infrastructure for your SaaS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "RevKeen", email = "support@revkeen.com"}
]
keywords = ["revkeen", "billing", "payments", "subscriptions", "invoices", "saas", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.21.0",
    "pydantic>=1.9.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://revkeen.com"
Documentation = "https://api.revkeen.com/v2/docs"
Repository = "https://github.com/revkeen/sdk-python"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["revkeen*"]
